Ignore some files - (soon) xcodeproj and xcworkspace, because it will be generated via xcodegen - intended ignore Pods and Podfile.lock

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ xcuserdata/
 ## compatibility with Xcode 3 and earlier (ignoring not required starting Xcode 4)
 build/
 DerivedData/
+
+## Project generated
+#RevaApp.xcodeproj
+
+# Add this line if you want to avoid checking in source code from the Xcode workspace
+#RevaApp.xcworkspace
+
 *.moved-aside
 *.pbxuser
 !default.pbxuser
@@ -54,7 +61,8 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+Podfile.lock
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
