--- a/RevaApp/RevaApp.xcodeproj/xcshareddata/xcschemes/RevaAppTests.xcscheme
+++ b/RevaApp/RevaApp.xcodeproj/xcshareddata/xcschemes/RevaAppTests.xcscheme
@@ -5,6 +5,22 @@
    <BuildAction
       parallelizeBuildables = "YES"
       buildImplicitDependencies = "YES">
+      <BuildActionEntries>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "B782EFEC26A13C4200FF9516"
+               BuildableName = "RevaAppTests.xctest"
+               BlueprintName = "RevaAppTests"
+               ReferencedContainer = "container:RevaApp.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
+      </BuildActionEntries>
    </BuildAction>
    <TestAction
       buildConfiguration = "Debug"
@@ -34,6 +50,16 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <BuildableProductRunnable
+         runnableDebuggingMode = "0">
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B782EFD626A13C4000FF9516"
+            BuildableName = "RevaApp.app"
+            BlueprintName = "RevaApp"
+            ReferencedContainer = "container:RevaApp.xcodeproj">
+         </BuildableReference>
+      </BuildableProductRunnable>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -41,6 +67,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "B782EFEC26A13C4200FF9516"
+            BuildableName = "RevaAppTests.xctest"
+            BlueprintName = "RevaAppTests"
+            ReferencedContainer = "container:RevaApp.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
